# imgcompressor

./: .gitignore  Dockerfile  README.md
docs/superpowers/plans/: 2026-03-25-sigil-hs-implementation.md  2026-03-28-sigil-decoder-implementation.md  2026-03-28-sigil-rs-implementation.md  2026-03-29-sigil-server-implementation.md  2026-03-30-sigil-lossless-dwt-implementation.md  2026-03-30-sigil-tans-implementation.md  2026-03-31-sigil-varint-serialization-implementation.md  2026-04-01-mutable-dwt-progress.md  2026-04-08-dwt-ans-entropy-coding.md
docs/superpowers/specs/: 2026-03-25-sigil-hs-reference-design.md  2026-03-28-sigil-decoder-design.md  2026-03-28-sigil-rs-design.md  2026-03-29-sigil-server-design.md  2026-03-30-sigil-lossless-dwt-design.md  2026-03-30-sigil-tans-entropy-coder-design.md  2026-03-31-sigil-varint-serialization-design.md  2026-04-01-mutable-dwt-progress-design.md  2026-04-08-dwt-ans-entropy-coding-design.md
sigil-hs/: package.yaml  sigil-hs.cabal  stack.yaml
sigil-hs/.stack-work/: stack.sqlite3
sigil-hs/app/: Main.hs
sigil-hs/bench/: Main.hs
sigil-hs/server/: Main.hs
sigil-hs/src/: Sigil.hs
sigil-hs/static/: index.html  sigil_wasm.js  sigil_wasm_bg.wasm
sigil-hs/test/: Gen.hs  Spec.hs
sigil-rs/: Cargo.toml
sigil-rs/src/: ans.rs  chunk.rs  color_transform.rs  crc32.rs  error.rs  lib.rs  mag_class.rs  pipeline.rs  predict.rs  reader.rs  rice.rs  serialize.rs  subband_coder.rs  token.rs  types.rs  wavelet.rs  zigzag.rs
sigil-rs/tests/: conformance.rs
sigil-wasm/: .gitignore  Cargo.toml
sigil-wasm/src/: lib.rs
(+49 files in other folders)
