[package]
name = "sigil-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for the Sigil image decoder"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sigil-decode = { path = "../sigil-rs" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
